Addition: added user controller, added postman test collection Refactor: added discriminator to Posts, added discriminator setting in DTO conversion
